explicitly passing reward value - calculating reward from special sensors seems not needed to far